调整部署文档

--- a/doc/在线考试系统V2.0_部署文档(docker版).md
+++ b/doc/在线考试系统V2.0_部署文档(docker版).md
@@ -1,14 +1,12 @@
 主要介绍如何基于docker、docker-compose部署后端项目、前端项目，主要的步骤是本地构建镜像，推送的远程仓库，远程服务器从远程仓库拉去镜像运行
 
-## 安装docker、docker-compose
+## 前提
 
-linux系统安装`docker`、`docker-compose`
+- 服务器：2核4G、CentOS 7.2 64位
 
-windows系统安装`Docker for Windows`
+- 注册阿里云账号
 
-## 部署后端项目
-
-### 安装MySQL
+## 安装MySQL
 
 MySQL需要单独安装，创建数据库和执行初始化脚本：
 
@@ -18,146 +16,93 @@ MySQL需要单独安装，创建数据库和执行初始化脚本：
 
 `/doc/deploy/mysql/microservice-auth.sql`
 
-### 安装fastDfs
+## 安装docker、docker-compose
 
-非必须，如果需要用到附件上传的相关功能才安装
+linux系统安装`docker`、`docker-compose`
 
-基于`docker`安装`fastDfs`，网上有教程
+windows系统安装`Docker for Windows`
 
-### 修改配置
+## 安装fastDfs
 
-修改`docker-compose.env`，其它基本不用修改
+参考：[fastdfs文件系统单机环境搭建和spring boot整合](https://blog.csdn.net/baidu_36415076/article/details/79505027)
+
+## 拉取镜像
+
+1. 登录阿里云Docker Registry
+
+```
+docker login --username=你的阿里云账号 registry.cn-hangzhou.aliyuncs.com
+
+如：
+
+docker login --username=tb70177569 registry.cn-hangzhou.aliyuncs.com
+```
+
+2. 拉取镜像
+
+拉取各服务的镜像：
+
+```
+后端镜像：
+docker pull registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/config-service:2.0
+docker pull registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/auth-service:2.0
+docker pull registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/user-service:2.0
+docker pull registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/exam-service:2.0
+docker pull registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/gateway-service:2.0
+docker pull registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/monitor-service:2.0
+
+前端镜像：
+docker pull registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/spring-microservice-exam-ui:2.0
+docker pull registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/spring-microservice-exam-web:2.0
+```
+
+## 修改配置
+
+将源码目录下的`docker-compose.env`、`docker-compose-base.yml`、`docker-compose-services.yml`、`docker-compose-nginx.yml`、`nginx.conf`上传到服务器的`/spring-microservice-exam/`目录下
+
+目录结构：
+
+![image](images/deploy/docker_root.png)
+
+修改`docker-compose.env`
 
 包括数据库IP、端口、用户名和密码，fastDfs的IP、端口
 
 ![image](images/deploy/config_docker_env.png)
 
-### 构建镜像
+## 运行
 
-在`spring-microservice-exam`目录下运行：
-
-```
-mvn clean package -DskipTests=true docker:build
-```
-
-![image](images/deploy/config_docker_mvn.png)
-
-构建成功：
-
-![image](images/deploy/config_docker_mvn_success.png)
-
-### 运行
-
-1. 运行基础镜像（consul、redis、rabbitMq、config-service）
+1. 按顺序执行：
 
 ```
+运行基础服务：
 docker-compose -f docker-compose-base.yml up -d
+
+运行后端服务：
+docker-compose -f docker-compose-services.yml up -d
+
+运行前端服务：
+docker-compose -f docker-compose-nginx.yml up -d
 ```
 
 `-d`表示后台运行
 
-![image](images/deploy/config_docker_base.png)
-
-2. 运行服务镜像（gateway-service、auth-service、user-service、exam-service）
-
-```
-docker-compose -f docker-compose-services.yml up -d
-```
-
-3. 检查是否启动成功
+2. 检查是否启动成功
 
 ```
 docker ps
 ```
 
-也可以访问`localhost:8500`查看服务是否注册成功
+## 访问
 
-4. 停止运行
+前台地址：ip:80
 
-以基础镜像为例：
-
-```
-docker-compose -f docker-compose-base.yml stop
-```
-
-## 部署前端项目
-
-以`spring-microservice-exam-ui`为例，`spring-microservice-exam-web`同理
-
-### 修改配置
-
-修改`spring-microservice-exam-ui/config/proxyConfig.js`里的后端api网关地址，一般情况下是不需要修改的
-
-![image](images/deploy/config_docker_ui_proxy.png)
-
-### 打包
-
-在`spring-microservice-exam-ui`目录下运行：
-
-```
-npm run build
-```
-
-运行成功后会生成`dist`目录，里面是项目的静态资源
-
-### 构建镜像
-
-在`spring-microservice-exam-ui`目录下运行：
-
-```
-docker build -t registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/spring-microservice-exam-ui:2.0 .
-```
-
-![image](images/deploy/config_docker_ui_build.png)
-
-### 运行
-
-运行：
-
-```
-docker run -d -p 80:80 --name spring-microservice-exam-ui registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/spring-microservice-exam-ui:2.0
-```
-
-![image](images/deploy/config_docker_ui_run.png)
-
-## 推送到至远程仓库
-
-以阿里云为例：
-
-在容器镜像服务菜单下，新建镜像仓库`spring-microservice-exam-ui`
-
-![image](images/deploy/config_docker_aliyun.png)
-
-推送镜像
-
-![image](images/deploy/config_docker_aliyun_push.png)
-
-推送成功
-
-![image](images/deploy/config_docker_aliyun_push_success.png)
-
-## 远程服务器拉去镜像运行
-
-```
-docker pull registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/spring-microservice-exam-ui:2.0
-```
-
-![image](images/deploy/config_docker_pull.png)
-
-```
-docker run -d -p 80:80 --name spring-microservice-exam-ui registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/spring-microservice-exam-ui:2.0
-```
-
-基于docker-compose运行后端项目:
-
-```
-docker-compose -f docker-compose-base.yml up -d
-```
-
-```
-docker-compose -f docker-compose-services.yml up -d
-```
+后台地址：ip:81
 
 ## 参考资料
 
-待补充
+- [安装docker](https://www.cnblogs.com/yufeng218/p/8370670.html)
+
+- [安装docker-compose](https://www.jianshu.com/p/94760f35c98c)
+
+- [在线考试系统V2.0镜像构建、推送、部署](http://ehedgehog.net/2019/04/22/%E5%9C%A8%E7%BA%BF%E8%80%83%E8%AF%95%E7%B3%BB%E7%BB%9FV2.0%E9%95%9C%E5%83%8F%E6%9E%84%E5%BB%BA%E3%80%81%E6%8E%A8%E9%80%81%E3%80%81%E9%83%A8%E7%BD%B2/)
