优化、增加docker-compose部署脚本

--- a/doc/在线考试系统V2.0_部署文档(docker版).md
+++ b/doc/在线考试系统V2.0_部署文档(docker版).md
@@ -26,39 +26,13 @@ windows系统安装`Docker for Windows`
 
 参考：[fastdfs文件系统单机环境搭建和spring boot整合](https://blog.csdn.net/baidu_36415076/article/details/79505027)
 
-## 拉取镜像
-
-1. 登录阿里云Docker Registry
-
-```
-docker login --username=你的阿里云账号 registry.cn-hangzhou.aliyuncs.com
-
-如：
-
-docker login --username=tb70177569 registry.cn-hangzhou.aliyuncs.com
-```
-
-2. 拉取镜像
-
-拉取各服务的镜像：
-
-```
-后端镜像：
-docker pull registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/config-service:2.0
-docker pull registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/auth-service:2.0
-docker pull registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/user-service:2.0
-docker pull registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/exam-service:2.0
-docker pull registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/gateway-service:2.0
-docker pull registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/monitor-service:2.0
-
-前端镜像：
-docker pull registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/spring-microservice-exam-ui:2.0
-docker pull registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/spring-microservice-exam-web:2.0
-```
-
 ## 修改配置
 
+在服务器的根目录创建文件夹：`spring-microservice-exam`
+
 将源码目录下的`docker-compose.env`、`docker-compose-base.yml`、`docker-compose-services.yml`、`docker-compose-nginx.yml`、`nginx.conf`上传到服务器的`/spring-microservice-exam/`目录下
+
+将启动脚本`doc/deploy/start.sh`上传到服务器的`/spring-microservice-exam/`目录下
 
 目录结构：
 
@@ -72,32 +46,30 @@ docker pull registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/spring-mi
 
 ## 运行
 
-1. 按顺序执行：
+1. 登录阿里云Docker Registry
 
 ```
-运行基础服务：
-docker-compose -f docker-compose-base.yml up -d
+$ docker login --username=你的阿里云账号 registry.cn-hangzhou.aliyuncs.com
 
-运行后端服务：
-docker-compose -f docker-compose-services.yml up -d
-
-运行前端服务：
-docker-compose -f docker-compose-nginx.yml up -d
+如：docker login --username=tb70177569 registry.cn-hangzhou.aliyuncs.com
 ```
 
-`-d`表示后台运行
+2. 拉取镜像并启动：`./start.sh pullrun`
 
-2. 检查是否启动成功
-
-```
-docker ps
-```
+3. 检查是否启动成功：`docker ps`
 
 ## 访问
 
 前台地址：ip:80
 
 后台地址：ip:81
+
+## 其它命令
+
+1. 停止容器：`./start.sh stop`
+2. 删除所有容器：`./start.sh removeAll`
+3. 重启所有容器：`./start.sh restart`
+4. 拉取并启动：`./start.sh pullrun`
 
 ## 参考资料
 
