--- a/docs/在线考试系统V2.0_数据库设计.md
+++ b/docs/在线考试系统V2.0_数据库设计.md
@@ -5,6 +5,14 @@
 
 #### 考试服务数据库PDM
 
-![image](产品设计/数据库PDM.jpg)
+![image](产品设计/数据库PDM-考试服务.png)
+
+#### 用户服务数据库PDM
+
+![image](产品设计/数据库PDM-用户服务.png)
+
+#### 授权服务数据库PDM
+
+![image](产品设计/数据库PDM-授权服务.png)
 
 如有问题欢迎指出！
